# fastapi-hive-project-template

./: .pdm-python  README.md  app.py  example.db  main.py  pyproject.toml
config/: .secrets.toml  config.py  settings.toml
cornerstone/admin/: __init__.py  implement.py
cornerstone/auth/: __init__.py  db.py  router.py  schemas.py  users.py
cornerstone/db/: __init__.py  implement.py
endpoints/heart_beat/router/: __init__.py  implement.py
endpoints/heart_beat/service/: __init__.py
endpoints/notes/: __init__.py
endpoints/notes/db/: __init__.py  implement.py
endpoints/notes/router/: __init__.py  implement.py
endpoints/notes/schema/: pydantic.py
endpoints/notes/service/: __init__.py
src/fastapi_project_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: create_user.py
