[project]
name = "fastapi-project-base"
version = "0.1.0"
description = ""
authors = [
    {name = "fanqingsong", email = "qsfan@qq.com"},
]
dependencies = [
    "aiofiles>=23.2.1",
    "fastapi-users[sqlalchemy]>=11.0.0",
    "uvicorn>=0.23.2",
    "sqladmin>=0.15.1",
    "fastapi-crudrouter>=0.8.6",
    "databases>=0.8.0",
    "aiosqlite>=0.19.0",
    "itsdangerous>=2.1.2",
    "fastapi==0.99.1",
    "setuptools>=68.2.2",
    "httpx>=0.25.0",
    "dynaconf>=3.2.3",
    "fastapi-hive==1.0.21",
    "joblib>=1.3.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
[tool.pdm.scripts]
start = "python3 main.py"

